# the-game-zone

./: .env  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/aws/: s3.rs
src/database/: database.sql  mod.rs  queries.rs
src/handlers/: api.rs  components.rs  mod.rs
src/lib/: s3.rs
src/middleware/: log.rs
src/model/: mod.rs
src/state/: mod.rs
src/utils/: auth.rs  jwt.rs  mod.rs
static/: index.html  main.css  style.css
templates/: 404.html  game-zone-page.html  game-zone-wrapper.html  game-zone.html  hello.html  home-page.html  home.html  login-field.html  login_field.html  loginfield.html  main.css  main.html  wrong-password.html
templates/components/: game-zone.html  game.html  went-wrong.html
templates/layouts/: main.html
