[package]
name = "the-game-zone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
hyper = "0.14.14"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio-postgres = "0.7"
tokio = { version = "1.38.0", features = ["full"] }
tower = {version = "0.4.13", features = ['timeout']}
tower-http = {version = "0.5.2", features = ['cors', 'fs']}
dotenv = "0.15.0"
serde_json = "1.0.118"
askama = "0.12.1"
askama_axum = "0.4.0"
aws-config = "1.5.5"
aws-sdk-s3 = "1.48.0"
anyhow = "1.0.87"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
aws-types = "1.3.3"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
jsonwebtoken = "9.3.0"
